force-app/main/default/objects/War_location__c/War_location__c.object-meta.xml
<CustomObject>
    <label>War location</label>
    <nameField>
        <label>War location Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>War location</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>