force-app/main/default/objects/War_location__c/fields/Accommodation_Type__c.field-meta.xml
<CustomField>
    <fullName>Accommodation_Type__c</fullName>
    <inlineHelpText>סוג יעד קליטה</inlineHelpText>
    <label>Accommodation Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>