force-app/main/default/objects/War_location__c/fields/Amount_of_additional_staff_of_JA__c.field-meta.xml
<CustomField>
    <fullName>Amount_of_additional_staff_of_JA__c</fullName>
    <inlineHelpText>כמות צוות תיגבור פנים סוכנותי</inlineHelpText>
    <label>Amount of additional staff of JA</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>