force-app/main/default/objects/War_location__c/fields/Amount_of_organic_staff__c.field-meta.xml
<CustomField>
    <fullName>Amount_of_organic_staff__c</fullName>
    <inlineHelpText>כמות צוות אורגני</inlineHelpText>
    <label>Amount of organic staff</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>