force-app/main/default/objects/War_location__c/fields/Amount_of_security_guards__c.field-meta.xml
<CustomField>
    <fullName>Amount_of_security_guards__c</fullName>
    <inlineHelpText>כמות אנשי ביטחון</inlineHelpText>
    <label>Amount of security guards</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>