force-app/main/default/objects/War_location__c/fields/Amount_of_soldiers__c.field-meta.xml
<CustomField>
    <fullName>Amount_of_soldiers__c</fullName>
    <inlineHelpText>כמות חיילים</inlineHelpText>
    <label>Amount of soldiers</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>