force-app/main/default/objects/War_location__c/fields/Amount_of_volunteers__c.field-meta.xml
<CustomField>
    <fullName>Amount_of_volunteers__c</fullName>
    <inlineHelpText>כמות מתנדבים</inlineHelpText>
    <label>Amount of volunteers</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>