force-app/main/default/objects/War_location__c/fields/Association__c.field-meta.xml
<CustomField>
    <fullName>Association__c</fullName>
    <label>Association</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>JAFI</fullName>
            </value>
            <value>
                <fullName>NON JAFI</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>