force-app/main/default/objects/War_location__c/fields/City__c.field-meta.xml
<CustomField>
    <fullName>City__c</fullName>
    <label>City</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>(ערבה) עין יהב</fullName>
            </value>
            <value>
                <fullName>אופקים</fullName>
            </value>
            <value>
                <fullName>אורה</fullName>
            </value>
            <value>
                <fullName>אור יהודה</fullName>
            </value>
            <value>
                <fullName>איבים</fullName>
            </value>
            <value>
                <fullName>איילות</fullName>
            </value>
            <value>
                <fullName>אילת</fullName>
            </value>
            <value>
                <fullName>אלון תבור</fullName>
            </value>
            <value>
                <fullName>אלית</fullName>
            </value>
            <value>
                <fullName>אשדוד</fullName>
            </value>
            <value>
                <fullName>אשקלון</fullName>
            </value>
            <value>
                <fullName>באר יעקב</fullName>
            </value>
            <value>
                <fullName>באר שבע</fullName>
            </value>
            <value>
                <fullName>בחן</fullName>
            </value>
            <value>
                <fullName>בית אלפא</fullName>
            </value>
            <value>
                <fullName>בית ינאי</fullName>
            </value>
            <value>
                <fullName>בית רימון</fullName>
            </value>
            <value>
                <fullName>בית שאן</fullName>
            </value>
            <value>
                <fullName>בני שמעון</fullName>
            </value>
            <value>
                <fullName>בת ים</fullName>
            </value>
            <value>
                <fullName>גדעונה</fullName>
            </value>
            <value>
                <fullName>גדרה</fullName>
            </value>
            <value>
                <fullName>גולן</fullName>
            </value>
            <value>
                <fullName>גלבוע</fullName>
            </value>
            <value>
                <fullName>גליל תחתון</fullName>
            </value>
            <value>
                <fullName>הגליל העליון</fullName>
            </value>
            <value>
                <fullName>הגליל התחתון</fullName>
            </value>
            <value>
                <fullName>הרדוף</fullName>
            </value>
            <value>
                <fullName>הרצליה</fullName>
            </value>
            <value>
                <fullName>זיכרון יעקב</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>