force-app/main/default/objects/War_location__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>War location</relationshipLabel>
    <relationshipName>War_location</relationshipName>
    <type>Lookup</type>
</CustomField>