force-app/main/default/objects/War_location__c/fields/Current_Number_of_Occupants__c.field-meta.xml
<CustomField>
    <fullName>Current_Number_of_Occupants__c</fullName>
    <inlineHelpText>חניכים/דיירים נוכחים כרגע</inlineHelpText>
    <label>Current Number of Occupants</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>