force-app/main/default/objects/War_location__c/fields/Geographic_location__c.field-meta.xml
<CustomField>
    <fullName>Geographic_location__c</fullName>
    <label>Geographic location</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Jerusalem</fullName>
            </value>
            <value>
                <fullName>South</fullName>
            </value>
            <value>
                <fullName>North</fullName>
            </value>
            <value>
                <fullName>Dead Sea</fullName>
            </value>
            <value>
                <fullName>Center</fullName>
            </value>
            <value>
                <fullName>ירושלים</fullName>
            </value>
            <value>
                <fullName>דרום</fullName>
            </value>
            <value>
                <fullName>צפון</fullName>
            </value>
            <value>
                <fullName>מרכז</fullName>
            </value>
            <value>
                <fullName>ים המלח</fullName>
            </value>
            <value>
                <fullName>דן</fullName>
            </value>
            <value>
                <fullName>חיפה</fullName>
            </value>
            <value>
                <fullName>י-ם והמרכז</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>