force-app/main/default/objects/War_location__c/fields/Geographic_Location_Colour__c.field-meta.xml
<CustomField>
    <fullName>Geographic_Location_Colour__c</fullName>
    <label>Geographic Location Colour</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>כתום</fullName>
            </value>
            <value>
                <fullName>ירוק</fullName>
            </value>
            <value>
                <fullName>אדום</fullName>
            </value>
            <value>
                <fullName>צהוב</fullName>
            </value>
            <value>
                <fullName>Green</fullName>
                <isActive>false</isActive>
                <label>Green</label>
            </value>
            <value>
                <fullName>Orange</fullName>
                <isActive>false</isActive>
                <label>Orange</label>
            </value>
            <value>
                <fullName>Red</fullName>
                <isActive>false</isActive>
                <label>Red</label>
            </value>
            <value>
                <fullName>Yellow</fullName>
                <isActive>false</isActive>
                <label>Yellow</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>