force-app/main/default/objects/War_location__c/fields/Last_update_date__c.field-meta.xml
<CustomField>
    <fullName>Last_update_date__c</fullName>
    <inlineHelpText>מועד עדכון אחרון של המתקן</inlineHelpText>
    <label>Last update date</label>
    <type>DateTime</type>
</CustomField>