force-app/main/default/objects/War_location__c/fields/Pikud_Haoref_ID__c.field-meta.xml
<CustomField>
    <fullName>Pikud_Haoref_ID__c</fullName>
    <externalId>true</externalId>
    <label>Pikud Haoref ID</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
    <unique>true</unique>
</CustomField>