force-app/main/default/objects/War_location__c/fields/Pikud_Haoref_Region__c.field-meta.xml
<CustomField>
    <fullName>Pikud_Haoref_Region__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Pikud Haoref Region</label>
    <referenceTo>Pikud_Haoref_Region__c</referenceTo>
    <relationshipLabel>War location</relationshipLabel>
    <relationshipName>War_location</relationshipName>
    <type>Lookup</type>
</CustomField>