force-app/main/default/objects/War_location__c/fields/Routine_Number_of_Occupants__c.field-meta.xml
<CustomField>
    <fullName>Routine_Number_of_Occupants__c</fullName>
    <inlineHelpText>חניכים/דיירים בשגרה</inlineHelpText>
    <label>Routine Number of Occupants</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>