force-app/main/default/objects/War_location__c/fields/Total_non_community_residents__c.field-meta.xml
<CustomField>
    <fullName>Total_non_community_residents__c</fullName>
    <formula>Current_Number_of_Occupants__c - Total_Number_of_residents__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total non community residents</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>