force-app/main/default/objects/War_location__c/fields/Total_number_of_visits__c.field-meta.xml
<CustomField>
    <fullName>Total_number_of_visits__c</fullName>
    <label>Total number of visits</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>