force-app/main/default/objects/War_location__c/fields/Traffic_Light_Colour__c.field-meta.xml
<CustomField>
    <fullName>Traffic_Light_Colour__c</fullName>
    <formula>IMAGE( 
CASE( Geographic_Location_Colour__c, 
&quot;ירוק&quot;, &quot;/sfc/servlet.shepherd/version/renditionDownload?rendition=ORIGINAL_Png&amp;versionId=068N20000024YtE&amp;operationContext=CHATTER&amp;contentId=05TN2000002SN3D&quot;,
&quot;כתום&quot;, &quot;/sfc/servlet.shepherd/version/renditionDownload?rendition=ORIGINAL_Png&amp;versionId=068N20000024RqH&amp;operationContext=CHATTER&amp;contentId=05TN2000002SUob&quot;,
&quot;צהוב&quot;, &quot;/sfc/servlet.shepherd/version/renditionDownload?rendition=ORIGINAL_Png&amp;versionId=068N20000024aLX&amp;operationContext=CHATTER&amp;contentId=05TN2000002SNvB&quot;, 
&quot;אדום&quot;,&quot;/sfc/servlet.shepherd/version/renditionDownload?rendition=ORIGINAL_Png&amp;versionId=068N20000024SzD&amp;operationContext=CHATTER&amp;contentId=05TN2000002SSTY&quot;,
&quot;&quot;),
&quot;Priority Flag&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Traffic Light Colour</label>
    <type>Text</type>
</CustomField>