force-app/main/default/objects/War_location__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>בתי חולים</fullName>
            </value>
            <value>
                <fullName>כפר נוער</fullName>
            </value>
            <value>
                <fullName>מכינה</fullName>
            </value>
            <value>
                <fullName>מכינות מח&quot;ר</fullName>
            </value>
            <value>
                <fullName>מכינות קול עמי</fullName>
            </value>
            <value>
                <fullName>מרכז קליטה</fullName>
            </value>
            <value>
                <fullName>משב רוח שדרות</fullName>
            </value>
            <value>
                <fullName>עמיגור</fullName>
            </value>
            <value>
                <fullName>קהילות מפונים</fullName>
            </value>
            <value>
                <fullName>קריית מוריה</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>