force-app/main/default/objects/War_location__c/fields/War_Location_ID__c.field-meta.xml
<CustomField>
    <fullName>War_Location_ID__c</fullName>
    <formula>Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>War Location ID</label>
    <type>Text</type>
</CustomField>